@@ -15,9 +15,7 @@ import rs.banka4.user_service.domain.card.db.*;
 import rs.banka4.user_service.domain.company.db.ActivityCode;
 import rs.banka4.user_service.domain.company.db.Company;
 import rs.banka4.user_service.domain.currency.db.Currency;
-import rs.banka4.user_service.domain.loan.db.Loan;
-import rs.banka4.user_service.domain.loan.db.LoanStatus;
-import rs.banka4.user_service.domain.loan.db.LoanType;
+import rs.banka4.user_service.domain.loan.db.*;
 import rs.banka4.user_service.domain.transaction.db.MonetaryAmount;
 import rs.banka4.user_service.domain.transaction.db.Transaction;
 import rs.banka4.user_service.domain.transaction.db.TransactionStatus;
@@ -52,7 +50,10 @@ public class TestDataRunner implements CommandLineRunner {
     private final ClientContactRepository clientContactRepository;
     private final TransactionRepository transactionRepository;
     private final LoanRepository loanRepository;
+    private final BankMarginRepository bankMarginRepository;
+    private final InterestRateRepository interestRateRepository;
     private final CardRepository cardRepository;
+
 
     @Override
     public void run(String... args) {
@@ -63,10 +64,12 @@ public class TestDataRunner implements CommandLineRunner {
         clientContactsSeeder();
         companySeeder();
         accountSeeder();
+        interestRateSeeder();
         loanSeeder();
         transactionSeeder();
+        seedBankMargins();
         cardSeeder();
-        authorizedUserSeeder();  // New method to seed authorized users
+        authorizedUserSeeder();
     }
 
     private void cardSeeder() {
@@ -125,7 +128,7 @@ public class TestDataRunner implements CommandLineRunner {
 
         Random random = new Random();
         List<Account> accounts = accountRepository.findAll();
-
+        List<InterestRate> interestRates = interestRateRepository.findAll();
         List<Loan> loans = random.ints(10, 0, 10000)
                 .mapToObj(i -> Loan.builder()
                         .loanNumber(generateRandomLoanNumber())
@@ -136,8 +139,11 @@ public class TestDataRunner implements CommandLineRunner {
                         .monthlyInstallment(generateRandomAmount())
                         .nextInstallmentDate(generateRandomDate().plusMonths(1))
                         .remainingDebt(generateRandomAmount())
-                        .interestRate(generateRandomInterestRate())
+                        .baseInterestRate(generateRandomInterestRate())
                         .account(accounts.get(random.nextInt(accounts.size())))
+                        //addition
+                        .interestRate(interestRates.get(new Random().nextInt(0, interestRates.size())))
+
                         .status(randomEnumValue(LoanStatus.class))
                         .type(randomEnumValue(LoanType.class))
                         .interestType(randomEnumValue(Loan.InterestType.class))
@@ -177,20 +183,21 @@ public class TestDataRunner implements CommandLineRunner {
     }
 
     private void clientContactsSeeder() {
-        Random random = new Random();
         List<Client> clients = clientRepository.findAll();
 
-        List<ClientContact> clientContacts = IntStream.range(0, 20)
-                .mapToObj(i -> ClientContact.builder()
-                        .client(clients.get(random.nextInt(clients.size())))
-                        .accountNumber(generateRandomAccountNumber())
-                        .nickname(generateRandomNickname())
-                        .build())
+        List<ClientContact> clientContacts = clients.stream()
+                .filter(client -> !clientContactRepository.existsByClient(client))
+                .flatMap(client -> IntStream.range(0, 1)
+                        .mapToObj(i -> ClientContact.builder()
+                                .client(client)
+                                .accountNumber(generateRandomAccountNumber())
+                                .nickname(generateRandomNickname())
+                                .build()))
                 .toList();
 
         List<ClientContact> newClientContacts = clientContacts.stream()
                 .filter(clientContact -> !clientContactRepository.existsByAccountNumber(clientContact.getAccountNumber()))
-                .collect(Collectors.toList());
+                .toList();
 
         clientContactRepository.saveAll(newClientContacts);
     }
@@ -592,7 +599,7 @@ public class TestDataRunner implements CommandLineRunner {
                         .lastName("Johnson")
                         .dateOfBirth(LocalDate.of(1985, 4, 12))
                         .gender(Gender.FEMALE)
-                        .email("alice.johnson@bankcorp.com")
+                            .email("alice.johnson@bankcorp.com")
                         .phone("3810611111111")
                         .address("789 Sunset Blvd")
                         .password(passwordEncoder.encode("password"))
@@ -1007,6 +1014,69 @@ public class TestDataRunner implements CommandLineRunner {
         }
     }
 
+    private void seedBankMargins() {
+        if (bankMarginRepository.findAll().isEmpty()){
+            BankMargin cashMargin = BankMargin.builder()
+                    .type(LoanType.CASH)
+                    .margin(new BigDecimal("1.75"))
+                    .build();
+
+            BankMargin mortgageMargin = BankMargin.builder()
+                    .type(LoanType.MORTGAGE)
+                    .margin(new BigDecimal("1.50"))
+                    .build();
+
+            BankMargin autoLoanMargin = BankMargin.builder()
+                    .type(LoanType.AUTO_LOAN)
+                    .margin(new BigDecimal("1.25"))
+                    .build();
+
+            BankMargin refinancingMargin = BankMargin.builder()
+                    .type(LoanType.REFINANCING)
+                    .margin(new BigDecimal("1.00"))
+                    .build();
+
+            BankMargin studentLoanMargin = BankMargin.builder()
+                    .type(LoanType.STUDENT_LOAN)
+                    .margin(new BigDecimal("0.75"))
+                    .build();
+
+            // Save all the bank margins to the database
+            bankMarginRepository.saveAll(
+                    List.of(cashMargin, mortgageMargin, autoLoanMargin, refinancingMargin, studentLoanMargin)
+            );
+        }
+    }
+
+    private void interestRateSeeder(){
+        if(interestRateRepository.findAll().isEmpty()){
+            List<InterestRate> interestRates = List.of(
+                    createInterestRate(0, 500000L, 6.25),
+                    createInterestRate(500001, 1000000L, 6.00),
+                    createInterestRate(1000001, 2000000L, 5.75),
+                    createInterestRate(2000001, 5000000L, 5.50),
+                    createInterestRate(5000001, 10000000L, 5.25),
+                    createInterestRate(10000001, 20000000L, 5.00),
+                    createInterestRate(20000001,2000000100L , 4.75)  // No upper limit
+            );
+
+            interestRateRepository.saveAll(interestRates);
+        }
+    }
+
+
+
+
+
+    private InterestRate createInterestRate(long minAmount, Long maxAmount, double fixedRate) {
+        return InterestRate.builder()
+                .minAmount(BigDecimal.valueOf(minAmount))
+                .maxAmount(maxAmount != null ? BigDecimal.valueOf(maxAmount) : null)
+                .fixedRate(BigDecimal.valueOf(fixedRate))
+                .dateActiveFrom(LocalDate.now())
+                .dateActiveTo(LocalDate.now().plusYears(1))
+                .build();
+    }
 
     private void authorizedUserSeeder() {
         List<Card> cards = cardRepository.findAll();
@@ -1035,4 +1105,5 @@ public class TestDataRunner implements CommandLineRunner {
 
         cardRepository.saveAll(cards);
     }
+
 }
